# sr

./: .clang-format  CMakeLists.txt  CMakePresets.json  build.bash
src/: CMakeLists.txt  common.h  image.c  image.h  main.c  miniz.c  miniz.h  onnx.c  onnx.h  session.c  session.h  spng.c  spng.h  sr.rc  stb_image.h  stb_image_write.h
src/cmake/: extract-nupkg.cmake
src/res/: 1041_Manifest_1.manifest
